# SeriesApp-AWS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
aws/lambda/: build.ps1  handler.py  requirements.txt
aws/lambda/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
aws/lambda/app/models/: episode.py  season.py  watched_episode.py
aws/lambda/app/routers/: episodes.py  seasons.py  series.py  users.py
aws/lambda/app/schemas/: season.py  series.py  watched_episode.py
aws/lambda/app/services/: season_service.py  series_service.py
aws/lambda/functions/: daily_notifications.py  main.py
aws/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
aws/terraform/modules/database/: main.tf  outputs.tf  variables.tf
aws/terraform/modules/networking/: main.tf
docs/: ARCHITECTURE.md  COST_MONITORING.md  DEPLOYMENT_GUIDE.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  netlify.toml
frontend/src/app/: App.tsx  routes.tsx
frontend/src/app/api/: index.ts  mock-data.ts
frontend/src/app/components/: Breadcrumbs.tsx  Layout.tsx  StatCard.tsx  UserSelector.tsx
frontend/src/app/pages/: HistoryPage.tsx  (+7 more)
frontend/src/styles/: theme.css
src/app/: config.py  database.py  main.py
src/app/models/: series.py  user.py
src/app/routers/: watched.py
src/app/schemas/: episode.py  user.py
src/app/services/: episode_service.py  user_service.py  watched_service.py
tests/: conftest.py  test_schemas.py
(+7 files in other folders)
