[project]
name = "seriesapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "ansible>=13.6.0",
    "anyio==4.13.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.135.2",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.48",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn[standard]==0.42.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
